@@ -1,8 +1,8 @@
-package com.example.jwtmonosecurity.filter;
+package com.example.jwtmonosecurity.security;
 
 import com.auth0.jwt.JWT;
 import com.auth0.jwt.algorithms.Algorithm;
-import com.example.jwtmonosecurity.domain.AppUser;
+import com.example.jwtmonosecurity.users.AppUser;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import lombok.RequiredArgsConstructor;
 import org.springframework.security.authentication.AuthenticationManager;
@@ -13,19 +13,17 @@ import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 
 import javax.servlet.FilterChain;
-import javax.servlet.ServletException;
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
 import java.io.IOException;
 import java.util.Date;
 import java.util.HashMap;
 import java.util.Map;
-import java.util.stream.Collectors;
 
-//TWORZENIE NOWEGO ACCESS_TOKENA I REFRESH_TOKENA
+import static org.springframework.http.MediaType.APPLICATION_JSON_VALUE;
 
 @RequiredArgsConstructor
-public class CustomAuthenticationFilter extends UsernamePasswordAuthenticationFilter {
+public class AuthenticationFilter extends UsernamePasswordAuthenticationFilter {
 
     private final AuthenticationManager authenticationManager;
 
@@ -39,26 +37,29 @@ public class CustomAuthenticationFilter extends UsernamePasswordAuthenticationFi
     }
 
     @Override
-    protected void successfulAuthentication(HttpServletRequest request, HttpServletResponse response, FilterChain chain, Authentication authentication) throws IOException, ServletException {
+    protected void successfulAuthentication(HttpServletRequest request, HttpServletResponse response, FilterChain chain,
+                                            Authentication authentication) throws IOException {
         AppUser user = (AppUser) authentication.getPrincipal();
         Algorithm algorithm = Algorithm.HMAC512("secret".getBytes());
-        String accessToken = JWT.create()
+        String accessToken = createToken(request, user, algorithm);
+        returnToken(response, accessToken);
+    }
+
+    private static void returnToken(HttpServletResponse response, String accessToken) throws IOException {
+        Map<String, String> tokens = new HashMap<>();
+        tokens.put("access_token", accessToken);
+        response.setContentType(APPLICATION_JSON_VALUE);
+        new ObjectMapper().writeValue(response.getOutputStream(), tokens);
+    }
+
+    private static String createToken(HttpServletRequest request, AppUser user, Algorithm algorithm) {
+        return JWT.create()
                 .withSubject(user.getUsername())
                 .withExpiresAt(new Date(System.currentTimeMillis() + 10 * 60 * 1000))
                 .withIssuer(request.getRequestURL().toString())
-//                .withClaim("authorities", user.getAuthorities().stream().toList())
-                .withClaim("authorities", user.getAuthorities().stream().map(GrantedAuthority::getAuthority).collect(Collectors.toList()))
+                .withClaim("authorities", user.getAuthorities()
+                        .stream().map(GrantedAuthority::getAuthority)
+                        .toList())
                 .sign(algorithm);
-        String refreshToken = JWT.create()
-                .withSubject(user.getUsername())
-                .withExpiresAt(new Date(System.currentTimeMillis() + 30 * 60 * 100000))
-                .withIssuer(request.getRequestURL().toString())
-                .sign(algorithm);
-//        response.setHeader("access_token", accessToken);
-//        response.setHeader("refresh_token", refreshToken);
-        Map<String, String> tokens = new HashMap<>();
-        tokens.put("access_token", accessToken);
-        tokens.put("refresh_token", refreshToken);
-        new ObjectMapper().writeValue(response.getOutputStream(), tokens);
     }
 }
